--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -1,14 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Bookstore</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Bookstore</title>
+        <link rel="stylesheet" href="reset.css" />
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-  <body>
-    Hello world
+    <body>
+        <div class="main_page">
+            <div class="header">
+                <h1 class="header__title">Bookstore</h1>
+                <div class="header__user">
+                    <img
+                        class="header__user__avatar"
+                        src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png"
+                        alt=""
+                    />
+                    <span class="header__user__name">John Doe</span>
+                </div>
+            </div>
+
+            <div class="content">
+                <div class="content__action">
+                    <input
+                        type="text"
+                        class="content__action__search"
+                        onkeyup="handleSearch()"
+                        placeholder="Search books"
+                    />
+                    <button
+                        class="content__action__btn btn"
+                        onclick="handleCreate()"
+                    >
+                        Add book
+                    </button>
+                </div>
+                <table class="content_data">
+                    <thead class="content_data__heading">
+                        <tr>
+                            <td>Name</td>
+                            <td>Author</td>
+                            <td>Topic</td>
+                            <td>Options</td>
+                        </tr>
+                    </thead>
+                    <tbody class="content__body">
+                        <!-- input table here -->
+                    </tbody>
+                </table>
+                <div class="popup popup_1 disabled">
+                    <div class="popup__content popup__delete">
+                        <p class="popup__title popup__delete__title">
+                            Delete book
+                        </p>
+                        <div class="popup__delete__body">
+                            <p id="row-1">Do you want to delete</p>
+                            <p id="row-2"></p>
+                        </div>
+                        <div class="popup__delete__action">
+                            <button
+                                class="btn btn--idle popup__delete__action--delete"
+                            >
+                                Delete
+                            </button>
+                            <button class="btn popup__delete__action--cancel">
+                                Cancel
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="popup popup_2 disabled">
+                    <div class="popup__content popup__add">
+                        <p class="popup__title popup__add__title">Add book</p>
+                        <div class="popup__add__inputs">
+                            <div class="popup__add__input">
+                                <label for="name">Name</label>
+                                <input
+                                    name="name"
+                                    class="popup__add__input__content input__Name"
+                                    type="text"
+                                    placeholder="Type here"
+                                    required
+                                />
+                            </div>
+                            <div class="popup__add__input">
+                                <label for="author">Author</label>
+                                <input
+                                    name="author"
+                                    class="popup__add__input__content input__Author"
+                                    type="text"
+                                    placeholder="Type here"
+                                />
+                            </div>
+                            <div class="popup__add__input">
+                                <label for="topic">Topic</label>
+                                <select
+                                    required
+                                    class="popup__add__input__content input__Topic"
+                                    name="topic"
+                                    id=""
+                                >
+                                    <option value="">
+                                        -- Select an option --
+                                    </option>
+                                    <option value="Programming">
+                                        Programming
+                                    </option>
+                                    <option value="Database">Database</option>
+                                    <option value="Database">DevOps</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="popup__add__action">
+                            <button class="btn popup__add__action--create">
+                                Create
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
     <script src="script.js"></script>
-  </body>
 </html>
